--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="openings.html">OPENINGS</a></li>
 				<li><a href="candidates.html">CANDIDATES</a></li>
-				<li><a href="#">VIEW</a></li>
+				<li><a href="createopenings.html">CREATE OPENINGS</a></li>
 
 				</ul>
 			</div>
