--- a/openings.html
+++ b/openings.html
@@ -20,13 +20,13 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="openings.html">OPENINGS</a></li>
         <li><a href="candidates.html">CANDIDATES</a></li>
-        <li><a href="#">VIEW</a></li>
+        	<li><a href="createopenings.html">CREATE OPENINGS</a></li>
 
         </ul>
       </div>
       <div class="content">
 
-<button class="button" style="vertical-align:middle" ><a href="createopenings.html"><span>Create Opening </span></a></button>
+
 
 
 	
