--- a/createopenings.html
+++ b/createopenings.html
@@ -20,7 +20,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="openings.html">OPENINGS</a></li>
         <li><a href="candiates.html">CANDIDATES</a></li>
-        <li><a href="#">VIEW</a></li>
+        	<li><a href="createopenings.html">CREATE OPENINGS</a></li>
 
         </ul>
       </div>
