--- a/candidates.html
+++ b/candidates.html
@@ -68,7 +68,7 @@
 </div>
 
 <div class="footer">
-  <p>&#9400;|All Rights Reseverd By Sachin Soman</p>
+  <p>&#9400;|All Rights Reseverd By Keerthana Ashok</p>
 
   </div>
 </body>
