--- a/openings.html
+++ b/openings.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
 <head>
 <title>HR MANAGEMENT</title>
 <link rel="stylesheet" type="text/css" href="styles/global.css"/>
+
 <meta name="viewport" content="width=device-width,intial-scale=1.0,user-scalable=0">
 <script src="script/jquery-3.2.0.min.js"></script>
 <script src="script/general.js"></script>
-
 </head>
 <body>
 
 <div id="header">
-	<div class="logo"><a href="#">Recruitment<span>Management</span></a>
-	</div>
+  <div class="logo"><a href="#">Recruitment<span>Management</span></a>
+  </div>
 </div>
+
 <div class="container">
       <div class="sidebar">
         <ul id="nav">
         <li><a href="index.html">HOME</a></li>
         <li><a href="openings.html">OPENINGS</a></li>
         <li><a href="candidates.html">CANDIDATES</a></li>
-        	<li><a href="createopenings.html">CREATE OPENINGS</a></li>
+        <li><a href="createopenings.html">CREATE OPENINGS</a></li>
 
         </ul>
       </div>
       <div class="content">
+   <button class="button" style="vertical-align:middle" ><a href="createopenings.html"><span>Create Opening </span></a></button>
 
 
-
-
-	
+  
 <div class="list-type2">
 <ol>
 <li><a href="#">Job Type1</a></li>
@@ -41,8 +41,11 @@
 </ol>
 </div>
 
-</div>			
+</div>
 
-			
+<div class="footer">
+  <p>&#9400;|All Rights Reseverd By Keerthana Ashok</p>
+
+  </div>
 </body>
 </html>
